# DataTransformation

./: .gitignore  CMakeLists.txt  config.json
data/: data.json  target.json
src/: main.cpp
src/calibrator/: calibrator.cpp  calibrator.hpp
src/config/: config.cpp  config.hpp
src/draw/: draw.cpp  draw.hpp
src/reader/: reader.cpp  reader.hpp
